--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -93,7 +93,8 @@
     }
 
     .tool-bar-mid {
-        float: right;
+        float: left;
+        margin-left: 200px;
     }
 
     .align-origin {
