fix bug of disapperence of dropdown

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="tool-bar-right">
-        <div class="btn-group" style="display:inline-block" dDropDown [trigger]="'click'" appendToBody (toggleEvent)="onToggle($event)"
+        <div class="btn-group" style="display:inline-block" dDropDown [trigger]="'hover'" appendToBody
             [alignOrigin]="projectRef" [appendToBodyDirections]="['centerDown', 'centerUp']">
             <span dDropDownToggle>
                 <button class="tool-bar-button">
@@ -71,7 +71,7 @@
             </ul>
         </div>
 
-        <div class="btn-group" style="display:inline-block" dDropDown [trigger]="'click'" appendToBody
+        <div class="btn-group" style="display:inline-block" dDropDown [trigger]="'hover'" appendToBody
             [alignOrigin]="flowunitRef" [appendToBodyDirections]="['centerDown', 'centerUp']">
             <span dDropDownToggle>
                 <button class="tool-bar-button">
@@ -87,7 +87,7 @@
             </ul>
         </div>
 
-        <div class="btn-group" style="display:inline-block" dDropDown [trigger]="'click'" appendToBody
+        <div class="btn-group" style="display:inline-block" dDropDown [trigger]="'hover'" appendToBody
             [alignOrigin]="graphRef" [appendToBodyDirections]="['centerDown', 'centerUp']">
             <span dDropDownToggle>
                 <button class="tool-bar-button">
