--- a/src/app/components/header-main/header-main.component.html
+++ b/src/app/components/header-main/header-main.component.html
@@ -23,26 +23,26 @@
                     {{'editor' | translate}}
                 </a>
             </li>
-            <li>
+            <!-- <li>
                 <a class="nav-link" href=" javascript:void(0);" [ngClass]="{'tab-active': active==='task'}"
                     oncontext="return false" (click)="click('task')">
                     {{'taskLists' | translate}}
                 </a>
-            </li>
+            </li> -->
         </ul>
     </div>
     <div style="position: fixed;top:8px;right:0;">
         <div class="links-first" style="display: inline-block;">
-            <a href="/help/" target="_blank">
+            <a href="https://modelbox-ai.com/modelbox-book/" target="_blank">
                 <img src={{helpSvg}} />
-                <span>&nbsp;&nbsp;{{helpText}}</span>
+                <span style="margin-bottom: 10px;">&nbsp;&nbsp;{{helpText}}</span>
             </a>
         </div>
-        <div class="links-first" style="display: inline-block;vertical-align: middle;">
+        <!-- <div class="links-first" style="display: inline-block;vertical-align: middle;">
             <a href="/api/" target="_blank">
                 <img src={{apiSvg}} />
                 <span>&nbsp;&nbsp;API</span>
             </a>
-        </div>
+        </div> -->
     </div>
 </div>
