--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -26,9 +26,8 @@
               [showSelectDialog]="showSelectDialog.bind(this)" [showSolutionDialog]="showSolutionDialog.bind(this)"
               [showCreateProjectDialog]="showCreateProjectDialog.bind(this)"
               [showOpenProjectButtonDialog]="showOpenProjectButtonDialog.bind(this)"
-              [showCreateFlowunitDialog]="showCreateFlowunitDialog.bind(this)" [projects]="projects"
-              (projectsEmmiter)="getToolBarProjectsChange($event)" [solutionList]="solutionList"
-              [graphName]="name"> 
+              [showCreateFlowunitDialog]="showCreateFlowunitDialog.bind(this)" [graphs]="graphs"
+              (graphsEmmiter)="getToolBarGraphsChange($event)" (refreshEmmiter)="refreshFlowunit($event)"> 
             </app-tool-bar>
 
             <div style="flex: 2;" class="graph">
