--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -93,8 +93,8 @@
     }
 
     .tool-bar-mid {
-        float: left;
-        margin-left: 200px;
+        float: right;
+        margin-left: 100px;
     }
 
     .align-origin {
