debug model of project cration

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -406,7 +406,7 @@
             </d-form-item>
 
             <d-form-item
-                *ngIf="formDataCreateFlowunit.programLanguage === 'inference' || formDataCreateFlowunit.programLanguage === 'c++'">
+                *ngIf="formDataCreateFlowunit.programLanguage === 'c++'">
                 <d-form-label [required]="true">
                     {{'toolBar.modal.flowUnitGroup' | translate}}
                 </d-form-label>
