--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -273,6 +273,7 @@
                     <d-select [appendToBody]="true" [ngModelOptions]="{ standalone: true }"
                         [appendToBodyDirections]=" ['centerDown', 'centerUp' ]"
                         [(ngModel)]="formDataCreateFlowunit.deviceType"
+                        (valueChange)="deviceTypeValueChange($event)"
                         [placeholder]="'toolBar.modal.deviceType' | translate" [options]="optionsDeviceType">
                     </d-select>
                 </d-form-control>
@@ -291,7 +292,7 @@
             <d-form-item>
                 <d-form-label [required]="true">{{'toolBar.modal.portOption' | translate}}</d-form-label>
                 <d-form-control>
-                    <div style="display:flex; justify-content:space-between">
+                    <div style="display:flex; justify-content:space-between" *ngIf="formDataCreateFlowunit.programLanguage !== 'inference'">
                         <div style="width:100px">
                             <d-select [appendToBody]=" true" [ngModelOptions]="{ standalone: true }"
                                 [appendToBodyDirections]=" ['centerDown', 'centerUp' ]" [(ngModel)]="portInfo.portType"
@@ -331,6 +332,50 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;
                         </button>
                     </div>
+
+                    <div style="display:flex; justify-content:space-between" *ngIf="formDataCreateFlowunit.programLanguage === 'inference'">
+                        <div style="width:80px">
+                            <input type="text" id="name" name="name" required [(ngModel)]="portInfo.portName" placeholder="port name">
+                        </div>
+                        <div style="width:100px">
+                            <d-select [appendToBody]=" true" [ngModelOptions]="{ standalone: true }"
+                                [appendToBodyDirections]=" ['centerDown', 'centerUp' ]" [(ngModel)]="portInfo.portType"
+                                [placeholder]="'toolBar.modal.inputOutput' | translate" [options]="optionsInOut"
+                                (valueChange)="handleValueChangePortType($event)">
+                            </d-select>
+                        </div>
+
+                        <div style="width:100px">
+                            <d-select [appendToBody]="true" [appendToBodyDirections]="['centerDown', 'centerUp']"
+                                [(ngModel)]="portInfo.dataType" [ngModelOptions]="{ standalone: true }"
+                                [filterKey]="'id'" [placeholder]="'toolBar.modal.dataType' | translate"
+                                [options]="optionsDataType" [isSearch]="true">
+                                <ng-template let-option="option">
+                                    {{ option }}
+                                </ng-template>
+                            </d-select>
+                        </div>
+
+                        <div style="width:60px">
+                            <d-select [appendToBody]="true" [appendToBodyDirections]="['centerDown', 'centerUp']"
+                                [disabled]="portDeviceTypeAble" [(ngModel)]="portInfo.deviceType"
+                                [ngModelOptions]="{ standalone: true }"
+                                [placeholder]="'toolBar.modal.deviceType' | translate" [options]="optionsDeviceType">
+                            </d-select>
+                        </div>
+
+                        <div style="width:60px">
+                            <d-input-number [placeholder]="'toolBar.modal.deviceNum' | translate"
+                                [ngModelOptions]="{ standalone: true }" [(ngModel)]="portInfo.deviceNum"
+                                class="input-number"></d-input-number>
+                        </div>
+
+                        <button class="tool-bar-button" (click)="handleAddPortInfoClick()">
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            {{'toolBar.modal.add' | translate}}
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                        </button>
+                    </div>
                 </d-form-control>
             </d-form-item>
 
@@ -340,7 +385,8 @@
                         [borderType]="'bordered'">
                         <thead dTableHead>
                             <tr dTableRow>
-                                <th dHeadCell>Nb.</th>
+                                <th *ngIf="formDataCreateFlowunit.programLanguage !== 'inference'" dHeadCell>Nb.</th>
+                                <th *ngIf="formDataCreateFlowunit.programLanguage === 'inference'" dHeadCell>Name</th>
                                 <th dHeadCell *ngFor="let colOption of portHeaderOptions.columns">{{ colOption.header }}
                                 </th>
                             </tr>
@@ -348,8 +394,11 @@
                         <tbody dTableBody>
                             <ng-template let-rowItem="rowItem" let-rowIndex="rowIndex">
                                 <tr dTableRow>
-                                    <td dTableCell>
+                                    <td dTableCell *ngIf="formDataCreateFlowunit.programLanguage !== 'inference'">
                                         {{ rowIndex + 1 }}
+                                    </td>
+                                    <td dTableCell *ngIf="formDataCreateFlowunit.programLanguage === 'inference'">
+                                        {{rowItem.portName}}
                                     </td>
                                     <td dTableCell>
                                         {{rowItem.portType}}
